# Word-Counter-with-C-PlusPlus

./: .gitignore  CMakeLists.txt  README.md
data/: example.txt
src/: Main.cpp  UserInterface.cpp  UserInterface.h
